[package]
name = "santas-lettre-helper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.10.0-rc.4", features = ["builder", "sendmail-transport", "tokio1", "tokio1-native-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
