[package]
name = "santas-lettre-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
lettre = { version = "0.10", features = ["builder", "sendmail-transport", "tokio1", "tokio1-native-tls"], default-features = false }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
